--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,13 @@
 {
-    "name" : "obj ext",
-    "description" : "my ext",
+    "name" : "Gifaster",
+    "description" : "control gif speed",
     "version" : "0.1.0",
     "manifest_version" : 2,
-    "content_scripts" :[
-        {
-            "matches": ["https://*/*"],
-            "css" : ["myCss.css"],
-            "js": ["jquery.js","script.js"],
-            "run_at": "document_end"
-        }
-    ],
-    "options_page": "./options.html",
+    "icons" : {
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
+    },
     "browser_action":{
         "default_popup":"index.html"
     },
